--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,12 +1,15 @@
 <style>
   html,
-  body {
+  body,
+  #root,
+  .acuity-calendar {
     height: 100%;
   }
   body {
     font-family: Open Sans, Helvetica, Arial, sans-serif;
     color: #2c2929;
   }
+
 
   .acuity-calendar__time-grid {
     height: 700px;
